--- a/css/style.css
+++ b/css/style.css
@@ -137,3 +137,22 @@ footer {
     right: 0;
 
 }
+aside{
+    background-color: #2c3e50;
+    margin-top: 20px;
+    padding: 20px;
+    color:white;
+}
+aside input{
+    width: 300px;
+}
+.inputs{
+    display: flex;
+    flex-direction: column;
+}
+aside button{
+    margin: top 10px;
+}
+#main{
+    margin-top: 10px;
+}
