--- a/css/style.css
+++ b/css/style.css
@@ -142,10 +142,13 @@ aside{
     background-color: #2c3e50;
     margin-top: 20px;
     padding: 20px;
-    color:white;
+    color:white;   
+    height: 250px;
+    width: 400px;
 }
 aside input{
     width: 300px;
+}
 }
 .inputs{
     display: flex;
